[package]
name = "l3x"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
colored = "2.0"
walkdir = "2.3"
clap = "3.0"
itertools = "0.10.1"
rand = "0.8.5"
indicatif = "0.16"
log = "0.4"
env_logger = "0.9"
leaky-bucket = "1.1.2"
futures = "0.3.30"
thiserror = "1.0.63"
chrono = "0.4.38"
pulldown-cmark = "0.9"

[package.metadata.scripts]
format = ["cargo fmt --all"]
